# HOIL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DockerFile  Doxyfile  GRAMMAR_COIL.md  GRAMMAR_HOIL.md  LANGUAGE.md  README.md  meson.build
examples/: gcd.hoil
include/: ast.h  binary.h  codegen.h  coil_format.h  coil_vm.h  error.h  hoil_coil_common.h  hoil_format.h  hoilc.h  lexer.h  parser.h  symtable.h  typecheck.h  util.h
src/: ast.c  ast.h  binary.c  binary_coil_utilities.c  codegen.c  coil_binary.c  coil_binary.h  coil_debugger.c  coil_interpreter.c  coil_vm.c  common.h  error.c  error_handling.c  error_handling.h  hoil_to_coil.c  lexer.c  lexer.h  main.c  parser.c  parser.h  symbol_table.c  symbol_table.h  symtable.c  type_system.c  type_system.h  typecheck.c  util.c
test/: example.coil  example.hoil  factorial.hoil  fibonacci.hoil  meson.build  test_lexer.c  test_parser.c
test/fixtures/: small.hoil  vector_add.hoil
tests/: test_lexer.c  test_main.c  test_parser.c
tools/: coil_dump.c
